# Clever-HDL

./: Cargo.toml
src/: expander.rs  irgen.rs  lang.rs  lex.rs  main.rs  mangle.rs  opt.rs  parse.rs  rlib.rs  sema.rs  ssa.rs  strings.rs  utils.rs
src/irgen/: link.rs  llhd.rs  visitor.rs
src/sema/: hir.rs  mir.rs  tycheck.rs
stdlib/core/: clock.rl  lib.rl  logic.rl
stdlib/core/logic/: ieee1164.rl  ieee1364.rl  tristate.rl
test/: arch_test.rl
