[package]
name = "clever-hdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2.2"
peekmore = "1.0.0"
fxhash = "0.2.1"
llhd = "0.16.0"
utf = "0.1"
replace_with = "0.1.7"
binfmt = {version="0.1",features=["ar"]}
bitflags = "1.3.2"
fake-enum = "0.1.4"
bytemuck = "1.12.3"
lru_time_cache = "0.11.11"
